// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > Select Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<ForwardRef
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    onClick={[Function]}
    type="primary"
  >
    <ChevronDown
      size="medium"
      type="primary"
    />
  </ForwardRef>
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
    isSplit={true}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<ForwardRef
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    hasIconOnly={false}
    isSelect={true}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "title": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label="jest-auto-snapshots String Fixture"
    loading={false}
    onClick={[Function]}
    size="small"
    type="primary"
  />
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
    isSplit={false}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed all props 1`] = `
<ForwardRef
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <ForwardRef
    onClick={[Function]}
    type="primary"
  >
    <ChevronDown
      size="medium"
      type="primary"
    />
  </ForwardRef>
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
    isSplit={true}
  />
</ForwardRef>
`;

exports[`jest-auto-snapshots > Select Matches snapshot when passed only required props 1`] = `
<ForwardRef
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <Button
    disabled={false}
    hasIconOnly={false}
    isSelect={true}
    items={
      Array [
        Object {
          "id": "jest-auto-snapshots String Fixture",
          "title": "jest-auto-snapshots String Fixture",
        },
      ]
    }
    label=""
    loading={false}
    onClick={[Function]}
    size="medium"
    type="secondary"
  />
  <ForwardRef
    isOpen={false}
  >
    <ForwardRef>
      <SelectItem
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </ForwardRef>
  </ForwardRef>
  <ForwardRef
    isOpen={false}
    isSplit={false}
  />
</ForwardRef>
`;
